crates/ark-lsp-core/src/lsp/code_action/snapshots/ark_lsp_core__lsp__code_action__roxygen__tests__adds_documentation_when_direct_preceding_line_is_not_documentation.snap
---
source: crates/ark-lsp-core/src/lsp/code_action/roxygen.rs
assertion_line: 286
expression: new_text
---
#' Title
#'
#' @param a
#' @param b
#'
#' @returns
#'
#' @export
#' @examples
