crates/ark-lsp-core/src/lsp/code_action/snapshots/ark_lsp_core__lsp__code_action__roxygen__tests__adds_parameters-2.snap
---
source: crates/ark-lsp-core/src/lsp/code_action/roxygen.rs
assertion_line: 250
expression: new_text
---
#' Title
#'
#' @param ...
#'
#' @returns
#'
#' @export
#' @examples
