crates/ark-lsp-core/src/lsp/code_action/snapshots/ark_lsp_core__lsp__code_action__roxygen__tests__no_parameters.snap
---
source: crates/ark-lsp-core/src/lsp/code_action/roxygen.rs
assertion_line: 268
expression: new_text
---
#' Title
#'
#' @returns
#'
#' @export
#' @examples
