crates/ark-lsp-core/src/lsp/code_action/snapshots/ark_lsp_core__lsp__code_action__roxygen__tests__supports_equals_assignment.snap
---
source: crates/ark-lsp-core/src/lsp/code_action/roxygen.rs
assertion_line: 277
expression: new_text
---
#' Title
#'
#' @param a
#' @param b
#'
#' @returns
#'
#' @export
#' @examples
