crates/ark-lsp-core/src/lsp/code_action/snapshots/ark_lsp_core__lsp__code_action__roxygen__tests__uses_hash_map_of_text_edits_without_document_changes_support.snap
---
source: crates/ark-lsp-core/src/lsp/code_action/roxygen.rs
assertion_line: 454
expression: text_edit.new_text
---
#' Title
#'
#' @param a
#' @param b
#'
#' @returns
#'
#' @export
#' @examples
